@@ -1,3 +1,9 @@
+Tue 25 Jun 1996 <bodg@tiuk.ti.com>
+
+        o Some code tidying up
+        o added a new test, copied from Date::GetDate
+        o improved performance
+
 Wed 22 May 1996 <bodg@tiuk.ti.com>
 
 	o Fixed a bug in the parser for dates in a default (local) timezone
